--- a/src/styles/CommonStyles.css
+++ b/src/styles/CommonStyles.css
@@ -1,127 +1,27 @@
 .center {
-    display: flex;
-    flex-direction: column;
-    align-items: center !important;
-    justify-content: center !important;
-    height: 100vh;
-}
-
-.menu-container {
-    display: flex;
-    justify-content: end;
-}
-
-.header-title {
-    color: white !important;
-    font-family: fantasy !important;
-}
-
-.specialty-title {
-    font-family: var(--primary-font-bold);
-}
-
-.main-content {
-    height: 100% !important;
-    background-color: #001529;
-}
-
-.main-layout {
-    height: auto !important;
-}
-
-.section-paragraph {
-    padding: 4vh 10vw !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center !important;
+  justify-content: center !important;
+  height: 100vh;
 }
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.profile-container {
-    .right-section {
-        margin: 0 !important;
-        padding: 0 !important;
-        padding-top: 0 !important;
-
-        .image-container {
-            max-width: 80% !important;
-            height: auto !important;
-            padding-top: 0 !important;
-            margin-top: 0 !important;
-        }
-        
-        .image-container img {
-            border-radius: 1em;
-            margin-top: 0 !important;
-        }
-    }
-}
-
-/* default classnames */
 .ant-menu {
-    z-index: 1 !important;
+  z-index: 1 !important;
 }
 .ant-typography {
-    margin-bottom: 0 !important;
-    color: white !important;
+  margin-bottom: 0 !important;
 }
 
-.ant-col, .ant-row {
-    color: white !important;
-    font-family: var(--primary-font-regular) !important;
+.ant-col,
+.ant-row {
+  font-family: var(--primary-font-regular) !important;
 }
 
 .ant-divider {
-    border-color: white !important;
-}
-
-
-
-
-@media screen and (max-width: 430px) {
-    .profile-container {
-        .left-section {
-            height: max-content !important;
-            padding: 10% 2%;
-            text-align: center;
-
-            .ant-row {
-                display: flex;
-                justify-content: center;
-            }
-        }
-        .right-section {
-            height: max-content !important;
-            padding: 0 !important;
-
-            .image-container {
-                padding: 5% !important;
-                width: 80%;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .profile-container {
-        .left-section {
-            height: max-content !important;
-            padding: 5% 2% 2% 2%;
-            text-align: center;
-
-            .ant-row {
-                display: flex;
-                justify-content: center;
-            }
-        }
-        .right-section {
-            height: max-content !important;
-            padding: 0 !important;
-
-            .image-container {
-                padding: 5% !important;
-                width: 60%;
-            }
-        }
-    }
+  border-color: white !important;
 }
