--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,5 +1,20 @@
-.main-content {
-  height: 100% !important;
+.main-layout {
+  height: auto !important;
+}
+
+.homepage-header {
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+.header-title {
+  font-family: fantasy !important;
+  color: white !important;
 }
 
 .menu-container {
@@ -7,49 +22,30 @@
   justify-content: end;
 }
 
-.homepage-header {
-  display: flex;
-  align-items: center;
-  background-color: white;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
-.header-title {
-  font-family: fantasy !important;
-}
-
-.main-layout {
-  height: auto !important;
-}
-
 .section-paragraph {
   padding: 4vh 10vw !important;
 }
 
-.profile-container {
-  .left-section {
-    padding: 0 5%;
-  }
+.left-section {
+  padding: 0 5%;
+}
 
-  .right-section {
-    margin: 0 !important;
-    padding: 0 !important;
-    padding-top: 0 !important;
+.right-section {
+  margin: 0 !important;
+  padding: 0 !important;
+  padding-top: 0 !important;
+}
 
-    .image-container {
-      max-width: 60% !important;
-      height: auto !important;
-      padding-top: 0 !important;
-      margin-top: 0 !important;
-    }
+.image-container {
+  max-width: 60% !important;
+  height: auto !important;
+  padding-top: 0 !important;
+  margin-top: 0 !important;
+}
 
-    .image-container img {
-      border-radius: 1em;
-      margin-top: 0 !important;
-    }
-  }
+.image-container img {
+  border-radius: 1em;
+  margin-top: 0 !important;
 }
 
 .role-title {
@@ -86,81 +82,93 @@
   }
 }
 
-@media screen and (max-width: 430px) {
-  .profile-container {
-    .left-section {
-      height: max-content !important;
-      padding: 10% 2%;
-      text-align: center;
+.top-profile {
+  display: none !important;
+}
 
-      .ant-row {
-        display: flex;
-        justify-content: center;
-      }
-    }
-    .right-section {
-      height: max-content !important;
-      padding: 0 !important;
+@media screen and (max-width: 990px) {
+  .left-section {
+    height: min-content !important;
+    text-align: center;
 
-      .image-container {
-        padding: 5% !important;
-        width: 80%;
-      }
-    }
-
-    .specialty-title {
-      font-size: 2em;
+    .ant-row {
+      display: flex;
+      justify-content: center;
     }
   }
-  .header-title {
+  .right-section {
     display: none !important;
+  }
+
+  .top-profile {
+    display: flex !important;
+    justify-content: center !important;
+    margin-bottom: 2em;
+    max-height: min-content !important;
+  }
+
+  .top-profile img {
+    width: 40% !important;
+  }
+
+  .specialty-title {
+    font-size: 1.5em !important;
   }
 }
 
 @media screen and (max-width: 820px) {
-  .profile-container {
-    .left-section {
-      height: max-content !important;
-      padding: 5% 10% 2% 10%;
-      text-align: center;
+  .left-section {
+    height: max-content !important;
+    padding: 5% 10% 2% 10%;
+    text-align: center;
 
-      .ant-row {
-        display: flex;
-        justify-content: center;
-      }
-    }
-    .right-section {
-      height: max-content !important;
-      padding: 0 !important;
-
-      .image-container {
-        padding: 5% !important;
-        width: 60%;
-      }
+    .ant-row {
+      display: flex;
+      justify-content: center;
     }
   }
 }
 
-@media screen and (max-width: 990px) {
-  .profile-container {
-    .left-section {
-      height: min-content !important;
-      text-align: center;
+@media screen and (max-width: 430px) {
+  .left-section {
+    height: max-content !important;
+    padding: 10% 2%;
+    text-align: center;
 
-      .ant-row {
-        display: flex;
-        justify-content: center;
-      }
+    .ant-row {
+      display: flex;
+      justify-content: center;
     }
-    .right-section {
-      height: min-content !important;
-      .image-container {
-        padding: 5% !important;
-        width: 40%;
-      }
-    }
-    .specialty-title {
-      font-size: 1.5em;
-    }
+  }
+
+  .specialty-title {
+    font-size: 25px !important;
+  }
+
+  .role-title {
+    font-size: 15px;
+  }
+
+  .header-title {
+    display: none !important;
+  }
+
+  .top-profile {
+    display: flex !important;
+    margin-bottom: 3em !important;
+    margin-top: 2em !important;
+  }
+
+  .top-profile .image-container {
+    max-height: min-content !important;
+    padding: 0 !important;
+  }
+
+  .top-profile .image-container .image {
+    width: 100% !important;
+  }
+
+  .profile-buttons {
+    margin-bottom: 10em;
   }
 }
